# dynosol-svd

./: Cargo.toml  README.md  rust-toolchain.toml
db/: Cargo.toml
db/migration/: V1__init_tables.sql
db/src/: main.rs
src/: db.rs
svd/: Cargo.toml
