[profile.release]
opt-level = "z"        # Optimize for size.
strip = true           # Automatically strip symbols from the binary.
lto = true             # Enable Link Time Optimization (LTO)
codegen-units = 1      # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"
overflow-checks = true


[workspace]
resolver = "2"
members = ["svd", "db"]

[workspace.dependencies]
refinery = { version = "0.8.16", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
log = { version = "0.4.25", features = ["kv_serde"] }
anyhow = "1.0.99"
reqwest = "0.12.23"
serde = "1.0.219"
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["postgres"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
